Fix 100vh issue on mobile

--- a/sass/_toggle.scss
+++ b/sass/_toggle.scss
@@ -32,7 +32,7 @@
 .slider:before {
   position: absolute;
   content: "F";
-  padding: 2px 7px;
+  padding: 2% 12%;
   height: 26px;
   width: 26px;
   left: 4px;
@@ -44,7 +44,7 @@
 
 .celsius.slider:before {
   content: "C";
-  padding-left: 6px;
+  padding-left: 10%;
   color: white;
   background-color: #263635;
 }
