--- a/sass/style.scss
+++ b/sass/style.scss
@@ -14,7 +14,6 @@ html {
 body {
   background-image: linear-gradient(141deg, #e6eaff, #f1f1f1, #f1f1ff);
   margin: 0;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
